# FluxaraAudioVideoConverter

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  build-appimage.sh  build-deb.sh  build-rpm.sh  com.fluxara.AVC.desktop  com.fluxara.AVC.yml  com.nova.AudioVideoConverter.desktop  com.nova.AudioVideoConverter.yml  examples.py  fluxara-avc.spec  install.sh  main.py  nova-audio-video-converter.spec  requirements.txt
.github/workflows/: ci.yml
debian/: changelog  control  rules
docs/: SSH.md
docs/brand/: IDENTITY.md  NAME-DECISION.md
docs/ui/: GUI-concept.md
locales/: en.json  it.json
scripts/: create_ssh_ca.sh  generate_ssh_key.fish  install-deps.sh  install-ssh-tools
src/: __init__.py  cleaner.rs  cli.rs  converter.rs  ffmpeg.rs  file_utils.rs  formats_cmd.rs  gui.rs  i18n.rs  info_cmd.rs  lib.rs  main.rs
src/ai/: __init__.py  audio_enhancer.py  mod.rs  video_enhancer.py
src/audio/: mod.rs
src/capture/: mod.rs
src/core/: __init__.py  converter.py  dvd_ripper.py  formats.py
src/gui/: main_window.py  mod.rs  state.rs  theme.rs  update.rs  view.rs
src/gui/pages/: capture.rs  clean.rs  enhance_audio.rs  enhance_video.rs  formats.rs  home.rs  info.rs  mod.rs  settings.rs  vhs_rescue.rs
src/gui/pages/convert/: messages.rs  mod.rs  state.rs  update.rs  (+1 more)
src/profiles/: __init__.py  devices.py
src/utils/: config.py  helpers.py  subtitle_search.py
src/video/: mod.rs
tests/: audio_filters_unit.rs  integration_smoke.rs
