[package]
name = "nova_audio_video_converter"
version = "0.1.0"
edition = "2021"
authors = ["Nova Team"]
description = "A modern, high-performance audio and video converter"
license = "MIT"

[[bin]]
name = "nova-converter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
colored = "2.1"
walkdir = "2.5"
rayon = "1.10"
which = "6.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
