[package]
name = "fluxara-avc"
version = "0.1.0"
edition = "2021"
authors = ["Fluxara Team"]
description = "Fluxara AVC – Linux-first analog restoration & conversion with FFmpeg"
license = "MIT"

[[bin]]
name = "fluxara-avc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
colored = "2.1"
walkdir = "2.5"
rayon = "1.10"
which = "6.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
